[package]
name = "sc_log_analyzer"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
eframe = { version = "0.27", features = ["wgpu"] }
once_cell = "1.19"
regex = "1.11"
rfd = "0.14"
directories = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.18"
